--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "tedious": "^11.2.0"
+    "express": "^4.17.1"
   }
 }
