--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-icons": "^1.4.0",
+    "chart.js": "^3.5.1",
     "crypto-js": "^4.1.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
